# GEC6818_MediaPlayer

./: .gitignore  CMakeLists.txt  README.md  arm-build.bash  final_project  make_compile.bash
include/: admin_login.h  file.h  list_user.h  main.h  manage_login.h  save_load.h  show_bmp.h  slow_slide.h  touch.h  user_login.h  user_register.h
src/: admin_login.c  file.c  init_destory.c  list_user.c  main.c  manage_login.c  polling.c  save_load.c  show_bmp.c  slow_slide.c  touch.c  ui.c  user_login.c  user_register.c  video.c
video/: laojian.avi  shushu.avi  yuanshen.avi
